# anais_staging

./: .env.example  .gitignore  BOOLEAN_FIX_IMPLEMENTATION.md  BOOLEAN_FIX_PLAN.md  PRIVATE_KEY_SETUP_GUIDE.md  QUICKSTART.md  README.md  SFTP_FILENAME_MAPPING.md  SFTP_USAGE_GUIDE.md  SURVENUE_CAS_COLLECTIVITE_FIX_PLAN.md  main.py  metadata.yml  pipeline_patches.py  profiles.yml  pyproject.toml  run_local_with_sftp.py
Staging/: main.py  staging_views.txt  standardize_data.py
Staging/dbtCertDC/: dbt_project.yml
Staging/dbtStaging/: dbt_project.yml  staging__helios_siicea_decisions.sql  staging__helios_siicea_missions_test.sql  staging__sa_siicea_missions_prog.sql
Staging/output_sql/: DC_det.sql  cert_dc_insern_2023_2024.sql  cert_dc_insern_n2_n1.sql  dc_det.sql  sa_esms.sql  sa_hubee.sql  sa_insee_histo.sql  sa_insern.sql  sa_pmsi.sql  sa_rpu.sql  sa_siicea_cibles.sql  sa_siicea_missions.sql  sa_siicea_suites.sql  sa_sirec.sql  sa_sivss.sql  sa_t_finess.sql  sa_usld.sql  v_comer.sql  v_commune.sql  v_commune_comer.sql  v_commune_depuis.sql  v_departement.sql  v_region.sql
Staging/output_sql_postgres/: sa_insern.sql  sa_siicea_cibles.sql  sa_siicea_missions.sql  sa_siicea_suites.sql  sa_sirec.sql  sa_sivss.sql  sa_t_finess.sql  v_comer.sql  v_commune.sql  v_commune_comer.sql  v_commune_depuis.sql  v_departement.sql  v_region.sql
dbtStaging/: packages.yml  staging__helios_siicea_missions_test.sql  staging__matrice_siicea_missions_prog.sql  staging__sa_siicea_missions_prog.sql
docs_archive/: SFTP_QUICK_START.md
tests/: README.md  validate_csv_schemas.py
(+182 files in other folders)
