[project]
name = "dnum"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb (==1.2.0)",
    "dbt-core (==1.9.2)",
    "dbt-duckdb (==1.9.2)",
    "pandas (==2.2.3)",
    "dlt (==1.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
