[project]
name = "dnum"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb (==1.2.0)",
    "dbt-core (==1.9.2)",
    "dbt-duckdb (==1.9.2)",
    "pandas (==2.2.3)",
    "dlt (==1.6.1)",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.41",
    "paramiko>=3.5.1",
    "psycopg2>=2.9.10",
    "dbt-postgres>=1.9.0",
    "pipeline @ git+https://github.com/DNUM-SocialGouv/anais_pipeline.git@main",
    "openpyxl>=3.1.5",
]
